feat: Add Gemini API client and content generation script
- Implemented a new script `gemini_cli.py` to interact with the Gemini API for content generation.
- Added functionality to generate a 2000-word description of a cat using the Gemini model.

refactor: Enhance horario extraction and instruction generation

- Created `scrap_horarios_menu.py` to read and process course schedules from Excel files.
- Improved data cleaning and extraction logic for course details including language, schedule, and instructor.
- Added functions to select files and sheets interactively using InquirerPy.
- Refined instruction formatting for better readability.

chore: Develop script for extracting course schedules

- Introduced `scrap_horarios_to_prompt.py` to automate the extraction of course schedules from a specified Excel file.
- Implemented functionality to generate a text file with course instructions based on the extracted data.

--- a/exportador_inscritos.config.json
+++ b/exportador_inscritos.config.json
@@ -1,5 +1,5 @@
 {
-    "plantilla": "plantilla_lista_estudiantes.xlsx",
+    "plantilla": "Carga_Horaria_2025.xlsx",
     "carga_horaria": "Carga_Horaria_2025.xlsx",
     "mes": "JUNIO 2025",
     "feriados": [
