fix: Correct plantilla path in exportador_inscritos.config.json

--- a/exportador_inscritos.config.json
+++ b/exportador_inscritos.config.json
@@ -1,5 +1,5 @@
 {
-    "plantilla": "Carga_Horaria_2025.xlsx",
+    "plantilla": "plantilla_lista_estudiantes.xlsx",
     "carga_horaria": "Carga_Horaria_2025.xlsx",
     "mes": "JUNIO 2025",
     "feriados": [
